// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Input /> should match snapshot 1`] = `
<div>
  <input
    class="Input___Input-l1y0rz-1 bLtEdt"
  />
</div>
`;

exports[`[Contrib] elements/<Input /> should match snapshot with \`disabled\` prop 1`] = `
<div>
  <input
    class="Input___Input-l1y0rz-1 jHgeEG"
    disabled=""
  />
</div>
`;

exports[`[Contrib] elements/<Input /> should match snapshot with a custom \`icon\` prop 1`] = `
<div>
  <div>
    <div
      class="Input__InputWithIconWrapper-l1y0rz-0 Qjren"
    >
      <span
        class="Input__InputIconContainer-l1y0rz-2 IyOKF"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-search fa-w-16 fa-1x Input__InputIcon-l1y0rz-3 eiJHjO Icon-sc-4jlog9-0 hXLKsx"
          color="var(--color-black-leather-jacket)"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
      </span>
      <input
        class="Input___Input-l1y0rz-1 eMUdic"
      />
    </div>
  </div>
</div>
`;
